@@ -229,54 +229,52 @@ var CloudCommander, Util,
      * @param pParams
      */
     DOM.ajax                    = function(pParams){
-        var lType       = pParams.type || 'GET',
-            lData       = pParams.data,
-            lSuccess_f  = pParams.success;
-        
-        if(!XMLHTTP)
-            XMLHTTP     = new XMLHttpRequest();
-        
-        XMLHTTP.open(lType, pParams.url, true);
-        XMLHTTP.send(lData);
-        
-        if( !Util.isFunction(lSuccess_f) ){
-            Util.log('error in DOM.ajax onSuccess:');
-            Util.log(pParams);
-        }
-        
-        XMLHTTP.onreadystatechange = function(pEvent){
-            if (XMLHTTP.readyState === 4 /* Complete */){
-                var lJqXHR = pEvent.target,
-                    lType = XMLHTTP.getResponseHeader('content-type');
-                
-                if (XMLHTTP.status === 200 /* OK */){
-                    var lData = lJqXHR.response;
+        var lRet = Util.checkObjTrue(pParams, ['url', 'success']);
+        if(lRet){
+            var p           = pParams,
+                lType       = p.type || p.method || 'GET';
+            
+            if(!XMLHTTP)
+                XMLHTTP     = new XMLHttpRequest();
+            
+            XMLHTTP.open(lType, pParams.url, true);
+            XMLHTTP.send(p.data);
+            
+            XMLHTTP.onreadystatechange = function(pEvent){
+                if (XMLHTTP.readyState === 4 /* Complete */){
+                    var lJqXHR = pEvent.target,
+                        lType = XMLHTTP.getResponseHeader('content-type');
                     
-                    /* If it's json - parse it as json */
-                    if(lType && Util.isContainStr(lType, 'application/json') ){
-                        var lResult = Util.tryCatch(function(){
-                            lData = Util.parseJSON(lJqXHR.response);
-                        });
+                    if (XMLHTTP.status === 200 /* OK */){
+                        var lData = lJqXHR.response;
                         
-                        if( Util.log(lResult) )
-                            lData = lJqXHR.response;
+                        /* If it's json - parse it as json */
+                        if(lType && Util.isContainStr(lType, 'application/json') ){
+                            var lResult = Util.tryCatch(function(){
+                                lData = Util.parseJSON(lJqXHR.response);
+                            });
+                            
+                            if( Util.log(lResult) )
+                                lData = lJqXHR.response;
+                        }
+                        if( Util.isFunction(p.success) )
+                            p.success(lData, lJqXHR.statusText, lJqXHR);
                     }
-                    
-                    lSuccess_f(lData, lJqXHR.statusText, lJqXHR);
+                    /* file not found or connection lost */
+                    else{
+                        /* if html given or something like thet
+                         * getBack just status of result
+                         */
+                        if(lType && lType.indexOf('text/plain') !== 0)
+                            lJqXHR.responseText = lJqXHR.statusText;
+                        
+                        Util.exec(p.error, lJqXHR);
+                    }
                 }
-                /* file not found or connection lost */
-                else{
-                    /* if html given or something like thet
-                     * getBack just status of result
-                     */
-                    if(lType && lType.indexOf('text/plain') !== 0)
-                        lJqXHR.responseText = lJqXHR.statusText;
-                    
-                    Util.exec(pParams.error, lJqXHR);
-                }
-            }
-        };
-    };    
+            };
+        }
+        return lRet;
+    };
     
     /**
      * Обьект для работы с кэшем
